--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx app/*",
+    "lint": "eslint app/**/*.ts --color",
     "lint:fix": "yarn lint --fix"
   },
   "devDependencies": {
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.0.0",
     "dotenv-webpack": "^8.0.1",
     "electron": "^23.2.1",
