--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": "app",
     "target": "ES6",
     "allowJs": true,
     "module": "commonjs",
@@ -10,12 +9,9 @@
     "sourceMap": true,
     "outDir": "build",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "paths": {
-      "@/config": ["config"],
-      "@/constants": ["constants"]
-    }
+    "resolveJsonModule": true
   },
   "include": ["app/**/*"],
-  "files": ["app/global.d.ts"]
+  "files": ["app/global.d.ts"],
+  "extends": "./tsconfig.paths.json"
 }
